# cli

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
data/: alias_locales.json
scripts/: extract_alias_locales.py
skills/localsend-cli/: SKILL.md
src/: agent.rs  alias.rs  alias_cmd.rs  cli.rs  config.rs  discovery.rs  error.rs  events.rs  identity.rs  legacy.rs  lib.rs  main.rs  mtls.rs  network.rs  output.rs  port.rs  receive.rs  receive_pin.rs  scan_server.rs  send.rs  server.rs  text_send.rs  util.rs
