[package]
name = "lsend-cli"
version = "0.1.0"
edition = "2024"
description = "Headless command-line tool compatible with the LocalSend protocol"
license = "Apache-2.0"

[[bin]]
name = "lsend"
path = "src/main.rs"

[dependencies]
localsend = { path = "vendor/localsend-core", default-features = false, features = ["http"] }

tokio = { version = "1.49", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "ring", "tls12"] }

axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }

socket2 = { version = "0.5", features = ["all"] }
if-addrs = "0.14"

futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
base64 = "0.22"
rand = "0.9"
mime_guess = "2"
dirs = "6"
indicatif = "0.17"
sys-locale = "0.3"
arboard = "3"
